# CppUnit

./: .gitignore  .gitreview  AUTHORS  CMakeLists.txt  ChangeLog  CodingGuideLines.txt  INSTALL-WIN32.txt  INSTALL-unix  Jenkinsfile  Makefile.am  NEWS  README  README.CVS  README.sourceforge  THANKS  TODO  autogen.sh  config-auto.h.in  config.guess  configure.ac  configure.in  cppunit-config.1  cppunit-config.in  cppunit.m4  cppunit.pc.in  cppunit.spec.in  cppunitConfig.cmake.in  mkinstalldirs
config/: ac_cxx_have_strstream.m4  ax_cxx_gcc_abi_demangle.m4  bb_enable_doxygen.m4  mkinstalldirs
contrib/: readme.txt
contrib/msvc/: CppUnitDev.WWTpl  readme.txt
contrib/xml-xsl/: report.xsl  tests.xml
cppunit/: Exception.cpp  Exception.h  Makefile.am  TestCaller.h  TestCase.cpp  TestCase.h  TestFailure.cpp  TestFailure.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestSuite.cpp  TestSuite.h  TextTestResult.cpp  cppunit.dsp  estring.h
debian/: changelog  control  copyright  cppunit-config.1  doc-base.cppunit  rules
devtools/: prepare-cvs.sh
doc/: CppUnit-win.dox  Doxyfile  Doxyfile.in  FAQ  Makefile  Makefile.am  Money.dox  cookbook.dox  cookbook.html  footer.html  header.html  makedox.bat  other_documentation.dox
examples/: Makefile.am  ReadMe.txt  examples.dsw  examples.opt  examples2008.sln
examples/ClockerPlugIn/: ClockerListener.cpp  ClockerListener.h  ClockerModel.cpp  ClockerModel.h  ClockerPlugIn.cpp  ClockerPlugIn.dsp  ClockerXmlHook.cpp  ClockerXmlHook.h  Makefile.am  ReadMe.txt  dummyMain.cpp
examples/DumperPlugIn/: DumperListener.cpp  DumperListener.h  DumperPlugIn.cpp  DumperPlugIn.dsp
examples/cppunittest/: CoreSuite.h  CppUnitTestMain.cpp  CppUnitTestMain.dsp  CppUnitTestMain.dsw  CppUnitTestPlugIn.dsp  CppUnitTestSuite.cpp  ExceptionTest.cpp  ExceptionTest.h  ExtensionSuite.h  FailingTestCase.cpp  FailingTestCase.h  HelperMacrosTest.cpp  HelperMacrosTest.h  HelperSuite.h  Makefile.am  MessageTest.cpp  MessageTest.h  MockTestCase.cpp  MockTestCase.h  MockTestListener.cpp  MockTestListener.h  NotEqualExceptionTest.cpp  NotEqualExceptionTest.h  OrthodoxTest.cpp  OrthodoxTest.h  OutputSuite.h  RepeatedTestTest.cpp  RepeatedTestTest.h  StringToolsTest.cpp  StringToolsTest.h  SynchronizedTestResult.h  TestAssertTest.cpp  TestAssertTest.h  TestCallerTest.cpp  TestCallerTest.h  TestCaseTest.cpp  TestCaseTest.h  TestDecoratorTest.cpp  TestDecoratorTest.h  TestFailureTest.cpp  (+29 more)
examples/hierarchy/: BoardGameTest.h  ChessTest.h  Makefile.am  hierarchy.dsp  hierarchy.dsw  main.cpp
examples/money/: Makefile.am  Money.h  MoneyApp.cpp  MoneyTest.cpp  MoneyTest.h  StdAfx.cpp
examples/msvc6/: Makefile.am
examples/qt/: ExampleTestCases.cpp  ExampleTestCases.h  Main.cpp  build.bat  qt_example.pro
examples/simple/: ExampleTestCase.cpp  ExampleTestCase.h  Main.cpp  Makefile.am  simple.dsp  simple_plugin.dsp
include/cppunit/: AdditionalMessage.h  Asserter.h  BriefTestProgressListener.h  CompilerOutputter.h  CompilerTestResultOutputter.h  Exception.h  Makefile.am  Message.h  NotEqualException.h  Outputter.h  Portability.h  Protector.h  SourceLine.h  SynchronizedObject.h  Test.h  TestAssert.h  TestCaller.h  TestCase.h  TestComposite.h  TestFailure.h  TestFixture.h  TestLeaf.h  TestListener.h  TestPath.h  TestRegistry.h  TestResult.h  TestResultCollector.h  TestRunner.h  TestSuccessListener.h  TestSucessListener.h  TestSuite.h  TextOutputter.h  TextTestProgressListener.h  TextTestResult.h  TextTestRunner.h  XmlOutputter.h  XmlOutputterHook.h  XmlTestResultOutputter.h  config-bcb5.h  config-mac.h  (+3 more)
include/cppunit/config/: Makefile.am  SelectDllLoader.h  SourcePrefix.h  config-bcb5.h  config-evc4.h  config-msvc6.h
include/cppunit/extensions/: AbstractTestFactory.h  AutoRegisterSuite.h  ExceptionTestCaseDecorator.h  HelperMacros.h  Makefile  Makefile.am  Makefile.in  Orthodox.h  RepeatedTest.h  TestDecorator.h  TestFactory.h  TestFactoryRegistry.h  TestNamer.h  TestSetUp.h  TestSuiteBuilder.h  TestSuiteBuilderContext.h  TestSuiteFactory.h  TypeInfoHelper.h
include/cppunit/plugin/: DynamicLibraryManager.h  DynamicLibraryManagerException.h  Makefile.am  Parameters.h  PlugInManager.h  PlugInParameters.h  TestPlugIn.h  TestPlugInAdapter.h  TestPlugInDefaultImpl.h  TestPlugInSuite.h
include/cppunit/portability/: CppUnitDeque.h  CppUnitMap.h  CppUnitVector.h  FloatingPoint.h  Makefile.am  SmartPtr.h  Stream.h
include/cppunit/tools/: Algorithm.h  Makefile.am  StringTools.h  XmlDocument.h  XmlElement.h
include/cppunit/ui/: Makefile.am
include/cppunit/ui/mfc/: Makefile.am  MfcTestRunner.h  TestRunner.h
include/cppunit/ui/qt/: Makefile.am  QtTestRunner.h  TestRunner.h
include/cppunit/ui/text/: Makefile.am  TestRunner.h  TextTestRunner.h
m4/: README  ax_cxx_gcc_abi_demangle.m4  ax_cxx_rtti.m4
src/: CppUnitLibraries.dsw  CppUnitLibraries2005.sln  CppUnitLibraries2010.sln  Makefile.am
src/DllPlugInTester/: CommandLineParser.cpp  CommandLineParser.h  CommandLineParserTest.cpp  CommandLineParserTest.h  DllPlugInTester.cpp  DllPlugInTester.dsp  DllPlugInTester.vcxproj  DllPlugInTesterTest.cpp  DllPlugInTesterTest.dsp  Makefile.am
src/cppunit/: AdditionalMessage.cpp  Asserter.cpp  BeOsDynamicLibraryManager.cpp  BriefTestProgressListener.cpp  CompilerOutputter.cpp  CompilerTestResultOutputter.cpp  DefaultProtector.cpp  DefaultProtector.h  DllMain.cpp  DynamicLibraryManager.cpp  DynamicLibraryManagerException.cpp  Exception.cpp  Makefile.am  Message.cpp  NotEqualException.cpp  Outputter.cpp  PlugInManager.cpp  Protector.cpp  ProtectorChain.cpp  ProtectorChain.h  ProtectorContext.h  RepeatedTest.cpp  ShlDynamicLibraryManager.cpp  StringTools.cpp  Test.cpp  TestAssert.cpp  TestCase.cpp  TestComposite.cpp  TestFactoryRegistry.cpp  TestFailure.cpp  TestLeaf.cpp  TestNamer.cpp  TestPath.cpp  TestPlugInAdapter.cpp  TestPlugInDefaultImpl.cpp  TestPlugInSuite.cpp  TestRegistry.cpp  TestResult.cpp  TestResultCollector.cpp  TestRunner.cpp  (+21 more)
src/msvc6/: Makefile.am
src/qttestrunner/: TestBrowserDlgImpl.cpp  TestBrowserDlgImpl.h  TestRunner.cpp  TestRunnerDlgImpl.cpp  (+3 more)
(+69 files in other folders)
