TESTS = hierarchy

noinst_PROGRAMS = hierarchy

INCLUDES= -I$(top_srcdir) 

hierarchy_SOURCES= BoardGame.cpp \
                   Chess.cpp \
                   main.cpp \
                   BoardGame.h \
                   Chess.h \
                   BoardGameTest.h \
                   ChessTest.h

hierarchy_LDADD= \
  $(top_builddir)/cppunit/libcppunit.la 

