SUBDIRS = extensions

DISTCLEANFILES = config-auto.h

libcppunitincludedir = $(includedir)/cppunit
libcppunitinclude_HEADERS =  \
	config-auto.h \
	config-msvc6.h \
	config-bcb5.h \
	Exception.h \
	NotEqualException.h \
	Portability.h \
	Test.h \
	TestAssert.h \
	TestCase.h \
	TestCaller.h \
	TestFailure.h \
	TestResult.h \
	TestRegistry.h \
	TestSuite.h \
	TextTestResult.h \
	TextTestRunner.h \
	TestListener.h
