libcppunitincludedir = $(includedir)/cppunit/extensions

libcppunitinclude_HEADERS = \
	TestFactory.h \
	AutoRegisterSuite.h \
	HelperMacros.h \
	Orthodox.h \
	RepeatedTest.h \
	ExceptionTestCaseDecorator.h \
	TestCaseDecorator.h \
	TestDecorator.h \
	TestFactoryRegistry.h \
	TestNamer.h \
	TestSetUp.h \
	TestSuiteBuilder.h \
	TestSuiteFactory.h \
	TypeInfoHelper.h

